--- a/style.css
+++ b/style.css
@@ -21,3 +21,15 @@ h4 {
     text-align: left;
   }
 
+.container {
+  display: flex;
+}
+
+.left-column, .right-column {
+  flex: 1; 
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
