--- a/style.css
+++ b/style.css
@@ -43,14 +43,12 @@ h4 {
 
 .decoration {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0px;
 }
 
-.shape {
-  display: flex;
-  padding-right: 30px;
-  justify-content: space-between;
-}
+
 
 img {
   width: 100%;
